# rocket-blog

./: Cargo.toml  Dockerfile  config.yml  docker-compose.yml  readme.md
config/: blog.yml
docker/: platform.sh
src/: config.rs  main.rs
static/styles/: layout.css
templates/: content.html.hbs  index.html.hbs
