[package]
name = "rocket-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
diesel = { version = "2.0.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
mini_markdown = "0.3.3"
